# MADS_thesis_equivariance

./: .gitignore  README.md  hypertune.py  pyproject.toml
src/: convert_custom_json_to_coco.py  dataset.py  generate_mnist_det.py  metric.py  model.py  preview_coco_bboxes.py  sahi_split_and_slice.py  train_equiv_yolo.py  train_frcnn_coco_generic.py  train_frcnn_resnet50.py  train_yolov8m6_coco_generic.py  train_yolov8m_p6_repro.yaml
src/Preproces/: convert_custom_json_to_coco.py  sahi_split_and_slice.py  verify_sliced_dataset.py
src/runs/smoke_y11n_128/: args.yaml  results.csv
src/runs/y11n_128_full/: args.yaml  results.csv
src/runs/y11n_128_full_251019_14.26/: args.yaml  results.csv
src/runs/y11n_256_e2cnn_adamw/: args.yaml  results.csv
