[project]
name = "MADS_thesis_equivariance"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Falco van den Hoogen", email = "falco.vandenhoogen@gmail.com"},
]
dependencies = [
    "e2cnn>=0.2.3", 
    "matplotlib>=3.10.3", 
    "pillow>=11.3.0", 
    "torch==2.7.1", 
    "torchvision==0.22.1", 
    "torchaudio==2.7.1", 
    "loguru>=0.7.3", 
    "scikit-learn>=1.7.0", 
    "sahi>=0.11.36", 
    "pycocotools>=2.0.10", 
    "numpy>=2.3.3", 
    "ultralytics>=8.3.213"
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "MIT"}

[[tool.pdm.source]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
verify_ssl = true
type = "index"


[tool.pdm]
distribution = false